Update CORS for Netlify